--- a/index.html
+++ b/index.html
@@ -6,14 +6,9 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h2 id="name">Tic - tac - toe</h2>
-        <div class="content">
-            <div id="area">
-
-            </div>
-        </div>
-        <p id="win"></p>
-        <p id="reset_p"><input type="button" id="reset"  value="Play new" onclick="location.reload();"></p>
+        <p id="name">Tic-Tac-Toe</p>
+        <p id="reset_p"><input type="button" id="reset"  value="Play" onclick="window.location.replace('https://kseniad2021.github.io/tic-tac-toe_JS/play.html');"></p>
+        <p id="reset_p"><input type="button" id="reset"  value="List" onclick="window.location.replace('https://kseniad2021.github.io/tic-tac-toe_JS/list.html');"></p>
+        <p id="reset_p"><input type="button" id="reset"  value="Replay" onclick="window.location.replace('https://kseniad2021.github.io/tic-tac-toe_JS/replay.html');"></p>
     </body>
 </html>
-<script src="js/View.js" type="module"></script>
