--- a/play.html
+++ b/play.html
@@ -14,7 +14,7 @@
         </div>
         <p id="win"></p>
         <p id="reset_p"><input type="button" id="reset"  value="Play new" onclick="location.reload();"></p>
-        <p id="reset_p"><input type="button" id="reset"  value="Menu" onclick="window.location.replace('hhttps://kseniad2021.github.io/tic-tac-toe_JS/index.html');"></p>
+        <p id="reset_p"><input type="button" id="reset"  value="Menu" onclick="window.location.replace('https://kseniad2021.github.io/tic-tac-toe_JS/index.html');"></p>
     </body>
 </html>
 <script src="js/View.js" type="module"></script>
